# chorus

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  TODO-application-features.md  TODO-dependency-upgrades.md  TODO-note-taking.md  TODO-security.md  TODO-tech-debt.md  drizzle.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: cloud-publish.yaml  cloud-qa.yaml  lint-and-format.yml
docs/: SEMANTIC-NOTES-DESIGN.md  STREAMING-RUST-DESIGN.md
script/: validate.sh
src/: AGENT.md  AGENTS.md
src-tauri/: AGENT.md  AGENTS.md  Cargo.toml  dev-runner.sh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: mcp-github-aarch64-apple-darwin  mcp-github-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  lib.rs  migrations.rs  window.rs
src/core/: config.ts
src/core/chorus/: AttachmentsHelpers.ts  ChatState.test.ts  ChatState.ts  CredentialService.ts  EmbeddingService.ts  ExportService.ts  MCPStdioTauri.ts  MediaTools.ts  Models.test.ts  Models.ts  OpenAICompletionsAPIUtils.ts  ToolsetCredentials.ts  Toolsets.test.ts  Toolsets.ts  ToolsetsManager.ts  UpdateQueue.test.ts  UpdateQueue.ts  WebTools.ts  brainstorm.test.ts  errors.test.ts  errors.ts  retry.test.ts  retry.ts  reviews.test.ts  screenshot.ts  simpleLLM.ts
src/core/infra/: DialogStore.ts  NavigationStore.ts  Store.ts  ToolPermissionStore.ts
src/core/utilities/: ProxyUtils.ts  Settings.ts
src/types/: mermaid.d.ts  use-react-query-auto-sync.d.ts
src/ui/: App.css  App.tsx  main.tsx
src/ui/components/: AccessibilityCheck.tsx  ApiKeysForm.tsx  AppHeader.tsx  AppSidebar.tsx  AsciiCube.tsx  AsciiLogo.tsx  AttachmentsViews.tsx  AutoExpandingTextarea.tsx  ChatHeaderActions.tsx  ChatInput.tsx  ChatMessageViews.tsx  ChatSuggestions.tsx  CommandMenu.tsx  Composer.tsx  ConfirmButton.tsx  ContentPane.tsx  ContextPane.tsx  CopyButton.tsx  CostDashboard.tsx  Draggable.tsx  EditableTitle.tsx  EditorPane.tsx  EmptyState.tsx  FeedbackButton.tsx  FindInPage.tsx  GroupChat.tsx  GroupChatThread.tsx  HeaderBar.tsx  Home.tsx  ImportChatDialog.tsx  LinkedItems.tsx  ListPane.tsx  ListPrompts.tsx  ManageModelsBox.tsx  MarkdownEditor.tsx  MessageCostDisplay.tsx  Metrics.tsx  ModePlaceholder.tsx  ModelPills.tsx  MouseTrackingEye.tsx  (+22 more)
(+135 files in other folders)
