[package]
name = "chorus"
version = "0.1.2"
description = "Talk to lots of AIs"
authors = ["you"]
edition = "2021"
default-run = "chorus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "melty_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [ "protocol-asset", "macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2.4"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-deep-link = "2"
thiserror = "1.0.63"
log = "0.4"
screenshots = "0.8"
base64 = "0.21.7"
image = "0.24.9"
window-vibrancy = "0.6"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-macos-permissions = "2"
chrono = "0.4" # For billing info
sha2 = "0.10"  # For billing info
hex = "0.4"    # For billing info
obfstr = "0.4" # For billing info
hmac = "0.12"  # For HMAC in billing info
tauri-plugin-devtools = "2.0.0"
tauri-plugin-keyring = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
